Honor contain:size correctly for multicol containers.

Updated the existing test for this to actually test with contain:size.

Bug: 863454
Change-Id: I44ac7bd4dd875845d14476dd9b286450bbc66bf0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1545302
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#646173}
Former-commit-id: 742dd9207861186c92ff5a6eb7b4b2432889bc42