third_party/blink/renderer/core/layout/layout_multi_column_spanner_placeholder.cc
@@ -103,11 +103,22 @@ void LayoutMultiColumnSpannerPlaceholder::RecalcVisualOverflow() {
 
 LayoutUnit LayoutMultiColumnSpannerPlaceholder::MinPreferredLogicalWidth()
     const {
+  // There should be no contribution from a spanner if the multicol container is
+  // size-contained. Normally we'd stop at the object that has contain:size
+  // applied, but for multicol, we descend into the children, in order to get
+  // the flow thread to calculate the correct preferred width (to honor
+  // column-count, column-width and column-gap). Since spanner placeholders are
+  // siblings of the flow thread, we need this check.
+  if (MultiColumnBlockFlow()->ShouldApplySizeContainment())
+    return LayoutUnit();
   return layout_object_in_flow_thread_->MinPreferredLogicalWidth();
 }
 
 LayoutUnit LayoutMultiColumnSpannerPlaceholder::MaxPreferredLogicalWidth()
     const {
+  // See above.
+  if (MultiColumnBlockFlow()->ShouldApplySizeContainment())
+    return LayoutUnit();
   return layout_object_in_flow_thread_->MaxPreferredLogicalWidth();
 }
 
